--- a/environment.yml
+++ b/environment.yml
@@ -115,22 +115,32 @@ dependencies:
       - commonmark==0.9.1
       - contourpy==1.3.0
       - cycler==0.12.1
+      - datasets==3.0.1
+      - dill==0.3.8
       - fonttools==4.54.1
+      - huggingface-hub==0.25.2
       - kiwisolver==1.4.7
       - llvmlite==0.43.0
       - matplotlib==3.9.2
+      - multiprocess==0.70.16
       - networkx==3.3
       - numba==0.60.0
       - numpy==2.0.2
       - packaging==24.1
       - pandas==2.2.3
+      - pyarrow==17.0.0
       - pygments==2.18.0
       - pyparsing==3.1.4
       - python-dateutil==2.9.0.post0
       - pytz==2024.2
+      - regex==2024.9.11
       - rich==12.6.0
+      - safetensors==0.4.5
       - six==1.16.0
       - smartprint==1.0.5
+      - tokenizers==0.20.1
+      - transformers==4.45.2
       - tzdata==2024.2
       - wget==3.2
+      - xxhash==3.5.0
 prefix: /home/grads/a/anath/anaconda3/envs/pruning
